--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -9,7 +9,7 @@
 
 
 <body>
-  <%- include(`${templatePath}/shared/progressBar`) %>
+  <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ARCHITECTURE' }) %>
   <div class="blankHM"></div>
   <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`hi there!`}) %>
