--- a/templates/architecture/narrow_stripes/index.ejs
+++ b/templates/architecture/narrow_stripes/index.ejs
@@ -10,7 +10,7 @@
 
 
 <body>
-  <%- include(`${templatePath}/shared/progressBar`) %>
+  <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ARCHITECTURE' }) %>
   <div class="blankHL"></div>
   <!-- cover -->
