--- a/templates/architecture/recreation_commons/index.ejs
+++ b/templates/architecture/recreation_commons/index.ejs
@@ -11,7 +11,7 @@
 
 
 <body>
-  <%- include(`${templatePath}/shared/progressBar`) %>
+  <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ARCHITECTURE' }) %>
   <div class="blankHL"></div>
 
