--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -8,7 +8,7 @@
 <!--Head-->
 
 <body>
-  <%- include( `${templatePath}/shared/progressBar`) %>
+  <%- include( `${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'PROJECT' }) %>
   <div class="blankHM"></div>
   <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`hello, I'm Vicky.
