--- a/templates/photography/index.ejs
+++ b/templates/photography/index.ejs
@@ -8,7 +8,7 @@
 
 
 <body>
-  <%- include(`${templatePath}/shared/progressBar`) %>
+  <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'PHOTOGRAPHY' }) %>
   <div class="blankHM"></div>
   <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`hi there!`}) %>
