--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -9,7 +9,7 @@
 
 
 <body>
-  <%- include(`${templatePath}/shared/progressBar`) %>
+  <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ABOUT' }) %>
 
   <div class="blankHM"></div>
