--- a/templates/architecture/manifold_ground/index.ejs
+++ b/templates/architecture/manifold_ground/index.ejs
@@ -8,7 +8,7 @@
 <!--Head-->
 
 <body>
-  <%- include(`${templatePath}/shared/progressBar`) %>
+  <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ARCHITECTURE' }) %>
   <div class="blankHL"></div>
   <!-- cover -->
