--- a/templates/architecture/the_rotation_of_curves/index.ejs
+++ b/templates/architecture/the_rotation_of_curves/index.ejs
@@ -7,7 +7,7 @@
 <!--Head-->
 
 <body>
-  <%- include(`${templatePath}/shared/progressBar`) %>
+  <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ARCHITECTURE' }) %>
   <div class="blankHL"></div>
 
