--- a/templates/design_system/navigation/V3/index.ejs
+++ b/templates/design_system/navigation/V3/index.ejs
@@ -7,7 +7,7 @@ pageURL:'design_system/navigation/V3/', thumbnailImgURL: 'vickywang_web.png'
 <!--Head-->
 
 <body>
-  <%- include(`${templatePath}/shared/progressBar`) %>
+  <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {
     type:'back', 
     currentPage: 'PROJECT',
