--- a/templates/design_system/navigation/index.ejs
+++ b/templates/design_system/navigation/index.ejs
@@ -8,7 +8,7 @@ pageURL:'design_system/navigation/', thumbnailImgURL: 'vickywang_web.png'
 
 
 <body>
-  <%- include(`${templatePath}/shared/progressBar`) %>
+  <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {
     type:'back', 
     currentPage: 'PROJECT',
