--- a/templates/shared/block_nav_header.ejs
+++ b/templates/shared/block_nav_header.ejs
@@ -1,4 +1,12 @@
+
+<% if (typeof leftArrowColor === 'undefined') { 
+  leftArrowColor = ''; 
+} 
+%>
+
 <!-- header -->
+
+
 <% const baseClasses = 'nav-item marginZero' %>
 <% const activeClasses = 'active activeNav' %>
 <% const inactiveClasses = 'inactive' %>
@@ -109,11 +117,11 @@
 <header>
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="<%- PageUrl %>" class="widthFitContent marginM centerVer pointer Grid--center"> 
+      <a href="<%- PageUrl %>" class="marginS centerVer pointer Grid--center"> 
         <div class="arrow-container moveBackArrow">
-          <div class="left-arrow"></div>
+          <div class="left-arrow <%= leftArrowColor %>"></div>
        </div>
-       <h4 class="fontWeight400">BACK</h4>
+       <h4 class="backText">BACK</h4>
       </a>
       <div class="navbar">
         <ul class="nav-menu">
