--- a/templates/shared/comp_textualElements_subTitle.ejs
+++ b/templates/shared/comp_textualElements_subTitle.ejs
@@ -1,5 +1,13 @@
+<% if (typeof subTitleFont === 'undefined') { 
+    subTitleFont = ''; 
+  } 
+  %>
 <div class="Grid-cell">
-    <div class="element">
-        <h2><%= subTitle %></h2>
-    </div>
+  <div class="element">
+    <% if (subTitleFont === 'h2' ) { %>
+    <h2><%= subTitle %></h2>
+    <% } else if (subTitleFont ==='h3' ) { %>
+    <h3><%= subTitle %></h3>
+    <% } %>
+  </div>
 </div>
