--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -39,7 +39,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./recreation_commons/">
           <div class="element">
-            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+            <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
               <img src="./all_sizes_recreation_commons.svg" alt="Appointa">
               <div class="elementInner">
                 <h5>Activity Center</h5>
@@ -95,7 +95,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./narrow_stripes/">
           <div class="element">
-            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+            <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_02.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Library and infrastructure</h5>
@@ -119,7 +119,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./recovery_of_river_edges/">
           <div class="element">
-            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+            <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_03.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Pavilion</h5>
@@ -151,7 +151,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./thesis_studio/">
           <div class="element">
-            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+            <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_07.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>On order: Differenciated</h5>
@@ -173,7 +173,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./the_rotation_of_curves/">
           <div class="element">
-            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+            <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_05.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Form finding exercise </h5>
@@ -204,7 +204,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./manifold_ground/">
           <div class="element">
-            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+            <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_04.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Urban public space</h5>
@@ -225,7 +225,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./LACAMA/">
           <div class="element">
-            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+            <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_08.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Musume extension</h5>
