--- a/templates/architecture/thesis_studio/index.ejs
+++ b/templates/architecture/thesis_studio/index.ejs
@@ -3,7 +3,7 @@
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Systems in Architecture: Exploring Continuity and Discontinuity in Design by Vicky Wang', 
   description:'This thesis examines the dynamic interplay of continuity and discontinuity in architectural systems. Focusing on the spatial arrangement of elements and their impact on design, it explores how architects manipulate these concepts to create meaningful, harmonious structures.', 
-  pageURL:'Continuity of Objects', thumbnailImgURL: 'vickywang_web.png'
+  pageURL:'thesis_studio/', thumbnailImgURL: 'vickywang_web.png'
   }) %>
 <!--Head-->
 
