--- a/templates/design_system/navigation/V1/index.ejs
+++ b/templates/design_system/navigation/V1/index.ejs
@@ -1030,7 +1030,7 @@ pageURL:'design_system/navigation/V1/', thumbnailImgURL: 'vickywang_web.png'
   <%- include(`${templatePath}/shared/comp_closingMessage`, { 
     version:``,  message:``}) %>
 
-  <%- include(`${templatePath}/shared/modal`) %>
+  <%- include(`${templatePath}/shared/comp_modal`) %>
   <%- include(`${templatePath}/shared/comp_backTop`) %>
   <%- include(`${templatePath}/shared/block_nav_footer`) %>
   <!-- Shared across the platform -->
