--- a/templates/shared/block_cardNoPassword.ejs
+++ b/templates/shared/block_cardNoPassword.ejs
@@ -2,7 +2,7 @@
   <div class="element">
     <a class="no-hover-effect" href="<%= cardNoPwURL%>">
       <div class="">
-        <div class="<%= hoverBorderColor %> elementCard float cardBorder borderRadiusS shadowBoxLt">
+        <div class="cardBottomBorder <%= hoverBorderColor %> float cardBorder borderRadiusS shadowBoxLt">
           <img src="<%= cardNoPwImgURL%>" alt="<%= cardNoPwTitle %>">
           <div class="element">
             <div class="element">
