--- a/templates/shared/block_cardProjects.ejs
+++ b/templates/shared/block_cardProjects.ejs
@@ -2,7 +2,7 @@
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
-      <div class="elementCard BYP float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="<%= websitePath %>/projectImages/Cover_BYP_AppB2B.png" />
           <div class="img__description">
@@ -42,7 +42,7 @@
   <div class="element">
     <a class="no-hover-effect" href="<%= websitePath %>/worksamples/BYP_LH_wsbeebr/BYPb2bOrboardingSubscription/">
 
-      <div class="elementCard BYP float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt">
         <img src="<%= websitePath %>/projectImages/Cover_BYP_AppB2B.png" alt="BYP B2B">
         <div class="element">
           <div class="element">
@@ -58,7 +58,7 @@
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
-      <div class="elementCard BYP float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="<%= websitePath %>/projectImages/Cover_BYP_B2C.png" />
           <div class="img__description">
@@ -95,7 +95,7 @@
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect" href="<%= websitePath %>/worksamples/BYP_LH_wsbeebr/BYPb2cBooking/">
-      <div class="elementCard BYP float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt">
         <img src="<%= websitePath %>/projectImages/Cover_BYP_B2C.png" alt="BYP B2B">
         <div class="element">
           <div class="element">
@@ -114,7 +114,7 @@
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
-      <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="<%= websitePath %>/projectImages/Cover_LASO_AdminPanel.png" />
           <div class="img__description">
@@ -152,7 +152,7 @@
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect" href="<%= websitePath %>/worksamples/BYP_LH_wsbeebr/LSAdminPanel/">
-      <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt">
         <img src="<%= websitePath %>/projectImages/Cover_LASO_AdminPanel.png" alt="LH Super Admin">
         <div class="element">
           <div class="element">
@@ -169,7 +169,7 @@
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
-      <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="<%= websitePath %>/projectImages/Cover_LASO_RXZero.png" />
           <div class="img__description">
@@ -206,7 +206,7 @@
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect" href="<%= websitePath %>/worksamples/BYP_LH_wsbeebr/LSRefiningRXZero/">
-      <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt">
         <img src="<%= websitePath %>/projectImages/Cover_LASO_RXZero.png" alt="RX Zero">
         <div class="element">
           <div class="element">
@@ -222,7 +222,7 @@
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
-      <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="<%= websitePath %>/projectImages/Cover_LASO_CostCalculator.png" />
           <div class="img__description">
@@ -259,7 +259,7 @@
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect" href="<%= websitePath %>/worksamples/BYP_LH_wsbeebr/LSCost-benefitCalculator/">
-      <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt">
         <img src="<%= websitePath %>/projectImages/Cover_LASO_CostCalculator.png" alt="RX Zero">
         <div class="element">
           <div class="element">
@@ -276,7 +276,7 @@
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect" href="<%= websitePath %>/glorify/">
-      <div class="elementCard GLORIFY float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder GLORIFY float cardBorder borderRadiusS shadowBoxLt">
         <img src="<%= websitePath %>/projectImages/Cover_Glorify.png" alt="GLORIFY">
         <div class="element">
           <div class="element">
@@ -297,7 +297,7 @@
   <div class="element">
     <a class="no-hover-effect" href="<%= websitePath %>/appointa/">
       <div class="">
-        <div class="elementCard float cardBorder borderRadiusS APPOINTA shadowBoxLt">
+        <div class="cardBottomBorder float cardBorder borderRadiusS APPOINTA shadowBoxLt">
           <img src="<%= websitePath %>/projectImages/Cover_APPOINTA.png" alt="APPOINTA">
           <div class="element">
             <div class="element">
@@ -320,7 +320,7 @@
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect" href="<%= websitePath %>/seer/">
-      <div class="elementCard float cardBorder borderRadiusS SEER shadowBoxLt">
+      <div class="cardBottomBorder float cardBorder borderRadiusS SEER shadowBoxLt">
         <img src="<%= websitePath %>/projectImages/Cover_SEER.png" alt="SEER">
         <div class="element">
           <div class="element">
@@ -343,7 +343,7 @@
   <div class="element">
     <a class="no-hover-effect" href="<%= websitePath %>/design_system/">
       <div class="">
-        <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+        <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
           <img src="<%= websitePath %>/projectImages/vicky_website.svg" alt="vickywang.me">
           <div class="element">
             <div class="element">
@@ -366,7 +366,7 @@
   <div class="element">
     <a class="no-hover-effect" href="<%= websitePath %>/navigation/">
       <div class="">
-        <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+        <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
           <img src="<%= websitePath %>/projectImages/vicky_website.svg" alt="vickywang.me">
           <div class="element">
             <div class="element">
