--- a/templates/shared/block_cardnPassword.ejs
+++ b/templates/shared/block_cardnPassword.ejs
@@ -1,7 +1,7 @@
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
-      <div class="elementCard <%= hoverBorderColor %> float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder <%= hoverBorderColor %> float cardBorder borderRadiusS shadowBoxLt">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="<%= cardPwImgURL %>" />
           <div class="img__description">
