--- a/templates/shared/comp_cardnImg_link.ejs
+++ b/templates/shared/comp_cardnImg_link.ejs
@@ -1,7 +1,7 @@
 <div class="Grid Grid--full Grid--gutters">
   <div class="Grid-cell">
     <div class="element">
-      <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+      <div class="cardBottomBorder float cardBorder borderRadiusS shadowBoxLt">
         <img src="./PlaceholderDark_zeroBorderRadius.svg" alt="Placeholder">
         <div class="element">
           <h5><%= cardnLinkTopText %></h5>
