--- a/templates/shared/comp_modal.ejs
+++ b/templates/shared/comp_modal.ejs
@@ -1,7 +1,7 @@
   <!-- The Modal -->
   <div id="modal" class="modal">
     <span id="modal-close" class="modal-close">
-      <img class="iconXforModal" src="../icon/delete.svg" alt="&times;">
+      <img class="iconXforModal" src="<%= websitePath %>/icon/delete.svg" alt="modal">
     </span>
     <img id="modal-content" class="modal-content">
     <div id="modal-caption" class="modal-caption"></div>
