--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -3763,7 +3763,7 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
   <%- include(`${templatePath}/shared/comp_closingMessage`, { 
     version:``,  message:``}) %>
 
-  <%- include(`${templatePath}/shared/modal`) %>
+  <%- include(`${templatePath}/shared/comp_modal`) %>
   <%- include(`${templatePath}/shared/comp_backTop`) %>
   <%- include(`${templatePath}/shared/block_nav_footer`) %>
   <!-- Shared across the platform -->
