--- a/templates/shared/block_cardLinked.ejs
+++ b/templates/shared/block_cardLinked.ejs
@@ -1,7 +1,7 @@
 <div class="Grid-cell">
     <div class="element">
       <a class="no-hover-effect">
-        <div class="elementCard BYP float cardBorder borderRadiusS shadowBoxLt">
+        <div class="cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt">
           <div class="img__wrap">
             <img class="img__img" alt="Work Samples" src="<%= websitePath %><%- imgUrl %>" />
             <div class="img__description">
